--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,6 +69,29 @@ jobs:
       - run: ./vendor/bin/phing setup coverage
       - run: ./vendor/bin/php-coveralls -o coveralls.json -vvv -x tests/coverage.xml
 
+  "php83-mysql82":
+    docker:
+      - image: aimeos/ci-php:8.3
+      - image: cimg/mysql:8.2
+        environment:
+          MYSQL_ROOT_PASSWORD: rootpw
+          MYSQL_DATABASE: aimeos
+          MYSQL_USER: aimeos
+          MYSQL_PASSWORD: aimeos
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - php83-{{ checksum "composer.json" }}
+      - run: composer update -n --prefer-dist
+      - save_cache:
+          key: php83-{{ checksum "composer.json" }}
+          paths: [./vendor]
+      - run: for i in `seq 1 10`; do nc -z 127.0.0.1 3306 && echo OK && exit 0; echo -n .; sleep 1; done
+      - run: echo "<?php return array( 'db' => array( 'adapter' => 'mysql', 'host' => '127.0.0.1', 'port' => 3306, 'database' => 'aimeos', 'username' => 'aimeos', 'password' => 'aimeos', 'limit' => 3, 'opt-persistent' => false, 'stmt' => array( \"SET SESSIOn sort_buffer_size=2097144; SET NAMES 'utf8'; SET SESSION sql_mode='ANSI'\" ) ), 'fs' => array( 'adapter' => 'Standard', 'basedir' => '.' ), 'mq' => array( 'adapter' => 'Standard', 'db' => 'db' ) );" > config/resource.php
+      - run: ./vendor/bin/phing setup coverage
+      - run: ./vendor/bin/php-coveralls -o coveralls.json -vvv -x tests/coverage.xml
+
 workflows:
   version: 2
   unittest:
@@ -76,3 +99,4 @@ workflows:
       - "php80-mssql2019"
       - "php81-pgsql14"
       - "php82-mysql80"
+      - "php83-mysql82"
