--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
 		"doctrine/dbal": "~2.0||~3.0",
 		"psr/http-message": "~1.0",
 		"voku/portable-ascii": "~1.4||~2.0",
-		"enshrined/svg-sanitize": "^0.15.4"
+		"enshrined/svg-sanitize": "^0.15.4",
+		"intervention/image": "^3.0"
 	},
 	"require-dev": {
 		"php-coveralls/php-coveralls": "~2.0",
