--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
 		"aimeos/map": "^3.0.1",
 		"nyholm/psr7": "~1.2",
 		"doctrine/dbal": "~2.0||~3.0",
-		"psr/http-message": "~1.0",
+		"psr/http-message": "~1.0||~2.0",
 		"voku/portable-ascii": "~1.4||~2.0",
 		"enshrined/svg-sanitize": "^0.15.4",
 		"intervention/image": "^3.0"
