--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
 		"doctrine/dbal": "~2.0||~3.0",
 		"psr/http-message": "~1.0||~2.0",
 		"voku/portable-ascii": "~1.4||~2.0",
-		"enshrined/svg-sanitize": "^0.15.4",
+		"enshrined/svg-sanitize": "~0.18",
 		"intervention/image": "^3.0"
 	},
 	"require-dev": {
