--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
 		"php-coveralls/php-coveralls": "~2.7",
 		"squizlabs/php_codesniffer": "~3.0",
 		"phpunit/phpunit": "~10.0||~11.0",
-		"phing/phing": "~2.4"
+		"phing/phing": "~2.4",
+		"om/potrans": "dev-master"
 	},
 	"autoload": {
 		"psr-4": {
