--- a/.tx/config
+++ b/.tx/config
@@ -19,13 +19,13 @@ source_file = i18n/currency/core-currency.pot
 source_lang = en
 type = PO
 
-[o:aimeos:p:aimeos-core:r:lib-mshop]
+[o:aimeos:p:aimeos-core:r:core-mshop]
 file_filter = i18n/mshop/<lang>.po
 source_file = i18n/mshop/core-mshop.pot
 source_lang = en
 type = PO
 
-[o:aimeos:p:aimeos-core:r:lib-mshop-code]
+[o:aimeos:p:aimeos-core:r:core-mshop-code]
 file_filter = i18n/mshop/code/<lang>.po
 source_file = i18n/mshop/code/core-mshop-code.pot
 source_lang = en
