Use 2025.04 base package

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
 		"ext-pcre": "*",
 		"ext-PDO": "*",
 		"ext-zip": "*",
-		"aimeos/aimeos-base": "dev-master",
+		"aimeos/aimeos-base": "2025.04.*",
 		"aimeos/upscheme": "~1.0",
 		"aimeos/macro": "~1.0",
 		"aimeos/map": "^3.0.1",
